modified first-web-page and new css folder

--- a/favorite-things.html
+++ b/favorite-things.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href="css/styles.css" rel="stylesheet" type="text/css">
         <title>Sina's favorite things</title>
     </head>
     <body>
@@ -10,8 +11,19 @@
         <h3>People</h3>
         <p> Here are some of my favorite people!</p>
         <ul>
-            <li> My wife, D.</li>
-            <li>My daughter, E.</li>
+            <li> 
+                <a href="http://www.example.com/d.html">
+                    My wife, <strong>D.</strong>
+                <img src="img/d.png" alt="A cute picture of my wife.">
+                </a>
+            </li>
+                
+            <li>
+                <a href="http://www.example.com/e.html">
+                    My daughter, <em>E</em>.
+                <img src="img/e.png" alt="A cute picture of my daughter.">
+                </a>
+            </li>
             <li>My friends:
             <ul>
                 <li>the eepc</li>
