--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -2,13 +2,14 @@
 
 <html>
     <head>
+        <link href="css/my_first_wp.css" rel="stylesheet" type="text/css">
         <title>Hello World!</title>
     </head>
     
     <body>
         <h1>My first web page</h1>
-        <h2>Written with the guidance of Bloodymindedness</h2>
-        <p>This is my first web page!</p>
+        <h2>Written with the guidance of <em>Bloodymindedness</em></h2>
+        <p>This is <strong>my first web page!</strong></p>
         <p> Isn't this nice?</p>
 
 
@@ -20,6 +21,10 @@
             <li>CSS</li>
             <li>Javascript</li>
             <li>And a lot more!</li>
-        </ul>    
+        </ul>
+        <p>Check out <a href="http://www.epicodus.com">Epicodus</a>. It's a great 
+        school for learning web programming!</p>
+        <p>Here is a link to my <a href="favorite-things.html">favorite things</a>.</p>
+        <img src="img/kitten.png" alt="A photo of a cute kitten.">
     </body>
 </html>
